# mochi-tmci

./: README.md  setup.py  tensorflow.json  theta.json
example/: lenet5.py
plugin/: CMakeLists.txt
plugin/src/: CMakeLists.txt  DummyBackend.cpp  DummyBackend.hpp
test/: test_import.py  test_load_plugin.py
theta/: CMakeLists.txt  common.sh  run.qsub
tmci/: __init__.py  checkpoint.py  ops.py  plugins.py
tmci/src/: backend.cpp  backend.hpp  checkpoint.cpp  restore.cpp
